# giskard_parser_wrappers

./: CMakeLists.txt  package.xml  parser_plugin.xml
src/: parser_wrapper.cpp
